--- a/Presentation/AtiehJobCore.Web/Views/Shared/_BasicLayout.cshtml
+++ b/Presentation/AtiehJobCore.Web/Views/Shared/_BasicLayout.cshtml
@@ -13,7 +13,8 @@
         </div>
     </main>
 </div>
-
+<!-- login modal form -->
+<div id="login-modal" class="modal modal-fixed-footer"></div>
 @*@await Html.PartialAsync("_Adv")*@
 
 @await Html.PartialAsync("_Footer")
