--- a/Presentation/AtiehJobCore.Web/Views/Shared/_Foot.cshtml
+++ b/Presentation/AtiehJobCore.Web/Views/Shared/_Foot.cshtml
@@ -1,2 +1,23 @@
 ﻿<script type="text/javascript" asp-src-include="/js/jqueryAll.min.js" asp-append-version="true"></script>
 <script type="text/javascript" asp-src-include="/js/web.min.js" asp-append-version="true"></script>
+<script>
+    //$(document).ready(function ()
+    //{
+    //    $('#login-modal').modal();
+    //});
+
+    //$("#login-button").on("click", function (e)
+    //{
+    //    e.preventDefault();  // prevent standard form submission
+
+    //    $.ajax({
+    //        type: "GET",
+    //        url: "/Account/User/Login",
+    //        success: function (result)
+    //        {
+    //            $("#login-modal").html(result);
+    //            //$.validator.unobtrusive.parse("#myForm");
+    //        }
+    //    });
+    //});
+</script>
