--- a/Presentation/AtiehJobCore.Web/Areas/Account/Views/User/Login.cshtml
+++ b/Presentation/AtiehJobCore.Web/Areas/Account/Views/User/Login.cshtml
@@ -94,12 +94,13 @@
         </div>
     </div>
 </div>
+
 @section Scripts {
     <script>
 
         $(document).ready(function ()
         {
-            //$('.modal').modal();
+            //$('#login-model').modal();
             //$('input#input_text, textarea#textarea2').characterCounter();
 
         });
