--- a/Presentation/AtiehJobCore.Web/Views/Shared/_NavbarMenu.cshtml
+++ b/Presentation/AtiehJobCore.Web/Views/Shared/_NavbarMenu.cshtml
@@ -98,7 +98,7 @@
                     </a>
                 </div>
                 <div class="navbar-nav ml-2">
-                    <a class="nav-item nav-link waves-effect waves-light btn" asp-controller="User" asp-action="RegisterEmplyer" asp-area="Account">
+                    <a class="nav-item nav-link waves-effect waves-light btn" asp-controller="User" asp-action="RegisterEmployer" asp-area="Account">
                         <span class="fas fa-plug"></span>
                         ثبت نام کارفرما
                     </a>
